--- a/index.html
+++ b/index.html
@@ -38,6 +38,60 @@
         alt="Slide 3"
       />
     </div>
+    <br />
+    <span class="border" style="font-size: 40px">
+      <center>Welcome all to this website</center>
+    </span>
+
+    <section class="section section-dark">
+      <h2>Food</h2>
+      <p>
+        Food is any substance consumed to provide nutritional support for an
+        organism. Food is usually of plant, animal or fungal origin and contains
+        essential nutrients such as carbohydrates, fats, proteins, vitamins or
+        minerals.
+      </p>
+    </section>
+    <div class="pimg3">
+      <div class="ptext">
+        <p class="border">
+          Food is any substance nutritional support for an organism.
+        </p>
+        <br /><br /><br />
+      </div>
+    </div>
+
+    <p>Pizza</p>
+
+    <p>
+      <img
+        src="https://i.ibb.co/207jW622/pizza.jpg"
+        style="width: 170px; height: 170px margin-left 15px; float: right"
+      />
+      Pizza (Italian: [ˈpittsa], Neapolitan: [ˈpittsə]) is a savory dish of
+      Italian origin consisting of a usually round, flattened base of leavened
+      wheat-based dough topped with tomatoes, cheese, and often various other
+      ingredients (such as anchovies, mushrooms, onions, olives, pineapple,
+      meat, etc.), which is then baked at a high temperature, traditionally in a
+      wood-fired oven.[1] A small pizza is sometimes called a pizzetta. A person
+      who makes a pizza is known as a pizzailolo.
+    </p>
+    <hr />
+    <p>Pizza</p>
+    <p>
+      <img
+        src="https://i.ibb.co/207jW622/pizza.jpg"
+        style="width: 170px; height: 170px; float: left; margin-left: 15px"
+      />
+      Pizza (Italian: [ˈpittsa], Neapolitan: [ˈpittsə]) is a savory dish of
+      Italian origin consisting of a usually round, flattened base of leavened
+      wheat-based dough topped with tomatoes, cheese, and often various other
+      ingredients (such as anchovies, mushrooms, onions, olives, pineapple,
+      meat, etc.), which is then baked at a high temperature, traditionally in a
+      wood-fired oven.[1] A small pizza is sometimes called a pizzetta. A person
+      who makes a pizza is known as a pizzailolo.
+    </p>
+    <br /><br /><br />
     <script src="script.js"></script>
   </body>
 </html>
