--- a/index.html
+++ b/index.html
@@ -92,6 +92,10 @@
       who makes a pizza is known as a pizzailolo.
     </p>
     <br /><br /><br />
+    <footer>
+      <p>@ copy all rights and reserved by Amanda</p>
+    </footer>
+
     <script src="script.js"></script>
   </body>
 </html>
